--- a/backend/services/discovery/src/main/resources/application.yml
+++ b/backend/services/discovery/src/main/resources/application.yml
@@ -1,7 +1,5 @@
 spring:
   config:
-    import: optional:configserver:http://localhost:8888
+    import: configserver:http://localhost:8888
   application:
     name: discovery-service
-server:
-  port: 8761
